# graphicsexam

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
glad/: CMakeLists.txt
include/: Shader.h  Texture.h
src/: Texture.cpp
stb-image/: CMakeLists.txt
stb-image/src/: stb_image.cpp
